--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,3 +19,5 @@ jobs:
       uses: actions/checkout@v2
     - name: Run tests.
       run: go test ./...
+    - name: Codecov.
+      uses: codecov/codecov-action@v2
