--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,5 +19,9 @@ jobs:
       uses: actions/checkout@v2
     - name: Run tests.
       run: go test ./...
-    - name: Codecov.
+    - name: Generate coverage report
+      run: go test `go list ./... | grep -v examples` -coverprofile=coverage.txt -covermode=atomic
+    - name: Upload coverage report.
       uses: codecov/codecov-action@v2
+      with:
+        file: ./coverage.txt
